--- a/templates/govash.html
+++ b/templates/govash.html
@@ -274,89 +274,66 @@
                         ،سبز، بنفش و همه رنگها را می توان ساخت.
                     </p>
 
-                    <div id="carousel-with-lb" class="carousel slide carousel-multi-item" data-ride="carousel">
 
-                        <!--Controls-->
-                        <div class="controls-top">
-                            <a class="btn-floating btn-secondary" href="#carousel-with-lb" data-slide="prev"><i
-          class="fas fa-chevron-left"></i></a>
-                            <a class="btn-floating btn-secondary" href="#carousel-with-lb" data-slide="next"><i
-          class="fas fa-chevron-right"></i></a>
-                        </div>
-                        <!--/.Controls-->
+                    <h2 class="font-weight-bold my-5 text-center">عکس ها</h2>
 
-                        <!--Indicators-->
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-with-lb" data-slide-to="0" class="active secondary-color"></li>
-                            <li data-target="#carousel-with-lb" data-slide-to="1" class="secondary-color"></li>
+                    <!--First row-->
+                    <div class="row">
 
-                        </ol>
-                        <!--/.Indicators-->
+                        <!--First column-->
+                        <div class="col-md-12">
 
-                        <!--Slides and lightbox-->
-
-                        <div class="carousel-inner mdb-lightbox" role="listbox">
                             <div id="mdb-lightbox-ui"></div>
-                            <!--First slide-->
-                            <div class=" carousel-item active text-center">
 
-                                <figure class="col-md-4 d-md-inline-block">
-                                    <a href="/static/img/IMG_0154.JPG" onclick="r()" data-size="1600x1067">
-                                        <img src="/static/img/resize/img_0154.jpg" class="img-fluid">
+                            <!--Full width lightbox-->
+                            <div class="mdb-lightbox">
+
+                                <figure class="col-md-4">
+                                    <a href="/static/img/IMG_0154.JPG" data-size="1600x1067">
+                                        <img src="/static/img/resize/img_0154.jpg" class="img-fluid z-depth-1">
                                     </a>
                                 </figure>
 
-                                <figure class="col-md-4 d-md-inline-block">
+                                <figure class="col-md-4">
                                     <a href="/static/img/IMG_8910.JPG" data-size="1600x1067">
-                                        <img src="/static/img/resize/img_8910.jpg" class="img-fluid">
+                                        <img src="/static/img/resize/img_8910.jpg" class="img-fluid z-depth-1">
                                     </a>
                                 </figure>
 
-                                <figure class="col-md-4 d-md-inline-block">
+                                <figure class="col-md-4">
                                     <a href="/static/img/IMG_8910 (1).JPG" data-size="1600x1067">
-                                        <img src="/static/img/resize/img_8910--1-.jpg" class="img-fluid">
+                                        <img src="/static/img/resize/img_8910--1-.jpg" class="img-fluid z-depth-1">
                                     </a>
                                 </figure>
 
-
-
-                            </div>
-                            <!--/.First slide-->
-
-                            <!--Second slide-->
-
-                            <!--/.Second slide-->
-
-                            <!--Third slide-->
-                            <div class="carousel-item text-center">
-
-
-                                <figure class="col-md-4 d-md-inline-block">
+                                <figure class="col-md-4">
                                     <a href="/static/img/IMG_5467.JPG" data-size="1600x1067">
-                                        <img src="/static/img/resize/img_5467.jpg" class="img-fluid">
+                                        <img src="/static/img/resize/img_5467.jpg" class="img-fluid z-depth-1">
                                     </a>
                                 </figure>
 
-                                <figure class="col-md-4 d-md-inline-block">
+                                <figure class="col-md-4">
                                     <a href="/static/img/IMG_5464.JPG" data-size="1600x1067">
-                                        <img src="/static/img/resize/img_5464.jpg" class="img-fluid">
+                                        <img src="/static/img/resize/img_5464.jpg" class="img-fluid z-depth-1">
                                     </a>
                                 </figure>
-                                <figure class="col-md-4 d-md-inline-block">
+
+                                <figure class="col-md-4">
                                     <a href="/static/img/FullSizeRender (3).jpg" data-size="1600x1067">
-                                        <img src="/static/img/resize/fullsizerender--3-.jpg" class="img-fluid">
+                                        <img src="/static/img/resize/fullsizerender--3-.jpg" class="img-fluid z-depth-1">
                                     </a>
                                 </figure>
+
+
 
                             </div>
-
-                            <!--/.Third slide-->
+                            <!--/Full width lightbox-->
 
                         </div>
-                        <!--/.Slides-->
+                        <!--/First column-->
 
                     </div>
-                    <!--/.Carousel Wrapper-->
+                    <!--First row-->
 
 
 
@@ -366,6 +343,8 @@
 
 
                 </div>
+
+
 
             </section>
         </div>
@@ -514,6 +493,7 @@
                 $("#cntctfrm").submit();
             });
         }
+        // MDB Lightbox Init
     </script>
 </body>
 
