--- a/templates/govashen.html
+++ b/templates/govashen.html
@@ -289,12 +289,71 @@
                     In the packs of, 30 miles of pars are included: 6 -12 - 18 colours and higher volumes: 250 miles and 1000 miles and … for high use and a workshop. The combination of colors red and yellow and blue is three main colors, combining the three colors of colors:
                     orange, green, violet, and all colors.
                 </p>
-                                    <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
+                <!-- <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
                     <a href="{% static 'img/IMG_8910.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910.JPG' %}"></a>
                     <a href="{% static 'img/IMG_8910 (1).JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910 (1).JPG' %}"></a>
                     <a href="{% static 'img/IMG_5467.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5467.JPG' %}"></a>
                     <a href="{% static 'img/IMG_5464.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5464.JPG' %}"></a>
-                    <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a>
+                    <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a> -->
+
+                <h2 class="font-weight-bold my-5 text-center">Photos</h2>
+
+                <!--First row-->
+                <div class="row">
+
+                    <!--First column-->
+                    <div class="col-md-12">
+
+                        <div id="mdb-lightbox-ui"></div>
+
+                        <!--Full width lightbox-->
+                        <div class="mdb-lightbox">
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_0154.JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_0154.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_8910.JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_8910.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_8910 (1).JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_8910--1-.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_5467.JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_5467.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_5464.JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_5464.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/FullSizeRender (3).jpg" data-size="1600x1067">
+                                    <img src="/static/img/resize/fullsizerender--3-.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+
+
+                        </div>
+                        <!--/Full width lightbox-->
+
+                    </div>
+                    <!--/First column-->
+
+                </div>
             </div>
 
         </section>
@@ -346,8 +405,8 @@
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
                     <p>
-                            <a href="/standarden">Standards</a>
-                        </p>
+                        <a href="/en_standard">Standards</a>
+                    </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
