--- a/templates/standarden.html
+++ b/templates/standarden.html
@@ -20,61 +20,61 @@
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-
+        
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
-
+        
         .top-nav-collapse {
             background-color: #667490!important;
         }
-
+        
         .navbar:not(.top-nav-collapse) {
             background: transparent!important;
         }
-
+        
         footer.page-footer {
             background-color: #667490 !important;
         }
-
+        
         @media only screen and (max-width: 768px) {
             .navbar {
                 background-color: #667490 !important;
             }
         }
         /* Necessary for full page carousel*/
-
+        
         html,
         body,
         .view {
             height: 100%;
         }
         /* Carousel*/
-
+        
         .carousel,
         .carousel-item,
         .carousel-item.active {
             height: 100%;
         }
-
+        
         .carousel-inner {
             height: 100%;
         }
-
+        
         .carousel-item:nth-child(1) {
             background-image: url({% static 'img/2.jpg' %});
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
         }
-
+        
         .carousel-item:nth-child(2) {
             background-image: url({% static 'img/3.jpg' %});
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
         }
-
+        
         .carousel-item:nth-child(3) {
             background-image: url({% static 'img/s.jpg' %});
             background-repeat: no-repeat;
@@ -249,7 +249,7 @@
                 <div class="row pt-5 mt-3">
                     <div class="col-md-12 mb-3">
                         <div class="intro-info-content text-center">
-                            <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Goauches</a></h1>
+                            <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Standard</a></h1>
 
                         </div>
                     </div>
@@ -262,8 +262,8 @@
             <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
 
 
-                                    <a href="{% static 'img/standard_1.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/standard_1.jpg' %}"></a>
-                    <a href="{% static 'img/standard_2.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/standard_2.jpg' %}"></a>
+                <a href="{% static 'img/standard_1.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/standard_1.jpg' %}"></a>
+                <a href="{% static 'img/standard_2.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/standard_2.jpg' %}"></a>
             </div>
 
         </section>
@@ -315,8 +315,8 @@
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
                     <p>
-                            <a href="/standarden">Standards</a>
-                        </p>
+                        <a href="/en_standard">Standards</a>
+                    </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
