--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -280,12 +280,67 @@
                 </p>
                 <p>
                     The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces. </p>
-<a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
- <a href="{% static 'img/img2301.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/img2301.jpg' %}"></a>
-                                <a href="{% static 'img/IMG_4922.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4922.JPG' %}"></a>
-                                <a href="{% static 'img/IMG_4374.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4374.JPG' %}"></a>
-                                <a href="{% static 'img/IMG_3960_Reduced.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_3960_Reduced.jpg' %}"></a>
-                                <a href="{% static 'img/FullSizeRender.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/FullSizeRender.jpg' %}"></a>            </div>
+
+                <h2 class="font-weight-bold my-5 text-center">Photos</h2>
+
+                <!--First row-->
+                <div class="row">
+
+                    <!--First column-->
+                    <div class="col-md-12">
+
+                        <div id="mdb-lightbox-ui"></div>
+
+                        <!--Full width lightbox-->
+                        <div class="mdb-lightbox">
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/unnamed.jpg" data-size="1600x1067">
+                                    <img src="/static/img/resize/unnamed.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/img2301.jpg" data-size="1600x1067">
+                                    <img src="/static/img/resize/img2301.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_4922.JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_4922.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_4374.JPG" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_4374.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/IMG_3960_Reduced.jpg" data-size="1600x1067">
+                                    <img src="/static/img/resize/img_3960_reduced.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+                            <figure class="col-md-4">
+                                <a href="/static/img/FullSizeRender.jpg" data-size="1600x1067">
+                                    <img src="/static/img/resize/fullsizerender.jpg" class="img-fluid z-depth-1">
+                                </a>
+                            </figure>
+
+
+
+                        </div>
+                        <!--/Full width lightbox-->
+
+                    </div>
+                    <!--/First column-->
+
+                </div>
+
+
         </section>
     </main>
     <footer class="page-footer font-small stylish-color-dark ">
@@ -335,8 +390,8 @@
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
                     <p>
-                            <a href="/standarden">Standards</a>
-                        </p>
+                        <a href="/en_standard">Standards</a>
+                    </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
