--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -538,8 +538,8 @@
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
                     <p>
-                            <a href="/standarden">Standards</a>
-                        </p>
+                        <a href="/en_standard">Standards</a>
+                    </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
