--- a/templates/standard.html
+++ b/templates/standard.html
@@ -20,43 +20,43 @@
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-
+        
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
-
+        
         .top-nav-collapse {
             background-color: #667490!important;
         }
-
+        
         .navbar:not(.top-nav-collapse) {
             background: transparent!important;
         }
-
+        
         footer.page-footer {
             background-color: #667490 !important;
         }
-
+        
         @media only screen and (max-width: 768px) {
             .navbar {
                 background-color: #667490 !important;
             }
         }
         /* Necessary for full page carousel*/
-
+        
         html,
         body,
         .view {
             height: 100%;
         }
         /* Carousel*/
-
+        
         .carousel,
         .carousel-item,
         .carousel-item.active {
             height: 100%;
         }
-
+        
         .carousel-inner {
             height: 100%;
         }
@@ -72,30 +72,30 @@
                 </div>
                 <div class="modal-body mx-3">
                     <form method="GET" action="mailto:support@giresh.com" id="cntctfrm">
-                    <div class="md-form mb-5">
-                        <i class="fas fa-user prefix grey-text"></i>
-                        <input type="text" id="form34" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="form34">اسم شما</label>
-                    </div>
+                        <div class="md-form mb-5">
+                            <i class="fas fa-user prefix grey-text"></i>
+                            <input type="text" id="form34" class="form-control validate">
+                            <label data-error="wrong" data-success="right" for="form34">اسم شما</label>
+                        </div>
 
-                    <div class="md-form mb-5">
-                        <i class="fas fa-envelope prefix grey-text"></i>
-                        <input type="email" id="form29" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="form29">ایمیل شما</label>
-                    </div>
+                        <div class="md-form mb-5">
+                            <i class="fas fa-envelope prefix grey-text"></i>
+                            <input type="email" id="form29" class="form-control validate">
+                            <label data-error="wrong" data-success="right" for="form29">ایمیل شما</label>
+                        </div>
 
-                    <div class="md-form mb-5">
-                        <i class="fas fa-tag prefix grey-text"></i>
-                        <input type="text" id="form32" class="form-control validate" name="subject">
-                        <label data-error="wrong" data-success="right" for="form32">موضوع</label>
-                    </div>
+                        <div class="md-form mb-5">
+                            <i class="fas fa-tag prefix grey-text"></i>
+                            <input type="text" id="form32" class="form-control validate" name="subject">
+                            <label data-error="wrong" data-success="right" for="form32">موضوع</label>
+                        </div>
 
-                    <div class="md-form">
-                        <i class="fas fa-pencil prefix grey-text"></i>
-                        <textarea type="text" id="form8" class="md-textarea form-control" rows="4" name="body"></textarea>
-                        <label data-error="wrong" data-success="right" for="form8">پیام شما</label>
-                    </div>
-</form>
+                        <div class="md-form">
+                            <i class="fas fa-pencil prefix grey-text"></i>
+                            <textarea type="text" id="form8" class="md-textarea form-control" rows="4" name="body"></textarea>
+                            <label data-error="wrong" data-success="right" for="form8">پیام شما</label>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button class="btn btn-unique" onclick="sendmail()">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
@@ -241,7 +241,7 @@
                     <div class="row pt-5 mt-3">
                         <div class="col-md-12 mb-3">
                             <div class="intro-info-content text-center">
-                                <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold">گواش های پارس</a></h1>
+                                <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> استاندارد</a></h1>
 
                             </div>
                         </div>
@@ -325,8 +325,8 @@
                         <a href="/representation">نمایندگی ها</a>
                     </p>
                     <p>
-                            <a href="/standard">استاندارد</a>
-                        </p>
+                        <a href="/standard">استاندارد</a>
+                    </p>
                     <p>
                         <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
                     </p>
@@ -417,11 +417,12 @@
 
     </footer>
     <script>
-  function sendmail(){
-        $(document).ready(function() {
-$("#cntctfrm").submit();
-});
+        function sendmail() {
+            $(document).ready(function() {
+                $("#cntctfrm").submit();
+            });
         }
-        </script>
+    </script>
 </body>
+
 </html>
